| Priyanshu | modify logo and nav bar for header

--- a/crowdsource-ui/src/views/about-us.ejs
+++ b/crowdsource-ui/src/views/about-us.ejs
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-<%- include('common/header.ejs',{bolo:"./home.html", suno:"./sunoIndia/home.html",likho:"./likhoIndia/home.html",dekho:"./dekhoIndia/home.html",path:"./"}); %>
+<%- include('common/header.ejs',{home: "./home.html", bolo:"./boloIndia/home.html", suno:"./sunoIndia/home.html",likho:"./likhoIndia/home.html",dekho:"./dekhoIndia/home.html",path:"./"}); %>
 <div class="container-fluid">
             <div class="row pt-lg-5">
                 <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
