--- a/crowdsource-ui/src/views/common/header/header.ejs
+++ b/crowdsource-ui/src/views/common/header/header.ejs
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <a class="logo-text text-dark" href="/">
             <h2 class="mb-0">
-                <img src="../../img/BoloIndiaLogo.png" alt="Bolo India" width="64px" height="54px">
+                <img src="../../img/meityLogo.svg" alt="Meity Logo" width="64px" height="54px">
             </h2>
         </a>
         <div class="version-beta">Beta</div>
@@ -10,6 +10,9 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-5" id="module_name">
+            <li class="nav-item module-item p-2" value="home"><a href="<%= home %>" class="nav-link text-dark font-weight-bold">
+                    <%= __('Home') %>
+                </a></li>
             <li class="nav-item module-item p-2" value="suno"><a href="<%= suno %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Suno India') %>
                 </a></li>
