--- a/crowdsource-ui/src/views/common/headerForContributor.ejs
+++ b/crowdsource-ui/src/views/common/headerForContributor.ejs
@@ -2,7 +2,7 @@
     <div class="d-flex align-items-center">
         <a class="logo-text text-dark" href="/">
             <h2 class="mb-0">
-                <img src="../img/BoloIndiaLogo.png" alt="Bolo India" width="64px" height="54px">
+                <img src="../img/meityLogo.svg" alt="Meity Logo" width="64px" height="54px">
             </h2>
         </a>
         <div class="version-beta">Beta</div>
