--- a/crowdsource-ui/src/views/dashboard.ejs
+++ b/crowdsource-ui/src/views/dashboard.ejs
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-12">
             <div class="row">
-                <%- include('../../build/views/common/back-btn.ejs',{url:"./home.html"}) %>
+                <%- include('../../build/views/common/back-btn.ejs',{url:"./boloIndia/home.html"}) %>
             </div>
             <div class="row">
                 <div class="col-12 col-md-7 col-lg-6">
