--- a/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
+++ b/crowdsource-ui/src/views/modules/likhoIndia/home/home.ejs
@@ -24,7 +24,7 @@
 </head>
 
 <body>
-<%- include('../common/header.ejs',{bolo:"../home.html", suno:"../sunoIndia/home.html",likho:"./home.html",dekho:"../dekhoIndia/home.html",path:"../"}); %>
+<%- include('../common/header.ejs',{home:"../home.html", bolo:"../boloIndia/home.html", suno:"../sunoIndia/home.html",likho:"./home.html",dekho:"../dekhoIndia/home.html",path:"../"}); %>
 <div class="container-fluid supreme-container">
     <div class="row">
         <%- include('../common/moduleIntro.ejs',{name:'Likho India',intro:'Help your language by translating text'}); %>
