--- a/crowdsource-ui/src/views/thank-you.ejs
+++ b/crowdsource-ui/src/views/thank-you.ejs
@@ -27,7 +27,7 @@
 <div id="content-wrapper" class="container-fluid mt-5 pb-2 px-3 px-md-5 bg-thank-you h-100">
     <div class="text-center">
         <div class="row position-absolute top-back-btn" style="top:80px;left:35px">
-            <%- include('../../build/views/common/back-btn.ejs',{url:"./home.html"}) %>
+            <%- include('../../build/views/common/back-btn.ejs',{url:"./boloIndia/home.html"}) %>
         </div>
         <h1 class="display-5 font-wt-900 site-blue">
             <%= __('Thank you for contributing!') %>
