--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -27,13 +27,13 @@
 <%- include('common/header.ejs',{home:"./home.html", bolo:"./boloIndia/home.html", suno:"./sunoIndia/home.html",likho:"./likhoIndia/home.html",dekho:"./dekhoIndia/home.html",path:"./"}); %>
 <div class="container-fluid supreme-container">
     <div class="row">
-        <div class="col-lg-8 col-md-11 mx-lg-5 mt-5">
+        <div class="col-lg-8 col-md-8 col-12 px-lg-5 mt-5">
             <h4 class="display-5 font-weight-normal lh-5 text-muted"><%= __('What is this Crowdsourcing Platform')%></h4>
             <p class="h4 lh-7 text-justify"><%= __('Crowdsourcing Platform is a Government Initiative to build an open data repository for all Indian languages.')%></p>
             <p class="h4 font-weight-light-lg font-weight-normal-sm lh-7 text-justify"><%= __('The participation is purely voluntary. The contributions made by you will be stored in the repo without any personal info. This data will be then made available to  technologists & language enthusiasts to help develop software and apps in Indian  languages, thus making them available to every Indian citizen.')%></p>
             <p class="h4 font-weight-light-lg font-weight-normal-sm lh-7 text-justify"><%= __('Help India build this open source platform and become atma-nirbhar in the digital space.')%></p>
         </div>
-        <div class="col-lg-3 col-md-11 ml-auto align-self-center" id="home-banner">
+        <div class="col-lg-4 col-md-4 col-12 align-self-center text-right" id="home-banner">
             <img src="../img/home3.svg" alt="home image" height="595px" class="img-fluid">
         </div>
     </div>
@@ -44,10 +44,10 @@
     </div>
 
     <div class="m-auto justify-content-center mt-lg-4 mx-lg-5 d-flex flex-row flex-wrap flex-lg-nowrap">
-        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"BOLO",img:"../img/say.svg",P1:"Contribute your voice",P2:"Validate what they say", url:"./boloIndia/home.html"})%>
-        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"SUNO",img:"../img/listen2.svg",P1:"Transcribing audio to text",P2:"Validate text as per the audio",url:"./sunoIndia/home.html"})%>
-        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"LIKHO",img:"../img/translate2.svg",P1:"Translate and type the text",P2:"Validate the text as per image",url:"./likhoIndia/home.html"})%>
-        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"DEKHO",img:"../img/look2.svg",P1:"Type the text as per image",P2:"Validate the text as per image",url:"./dekhoIndia/home.html"})%>
+        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"BOLO",img:"../img/say.svg",P1:"Contribute your voice",P2:"Validate what they say", url:"./boloIndia/home.html",cardNumber:"card1"})%>
+        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"SUNO",img:"../img/listen2.svg",P1:"Transcribing audio to text",P2:"Validate text as per the audio",url:"./sunoIndia/home.html",cardNumber:"card2"})%>
+        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"LIKHO",img:"../img/translate2.svg",P1:"Translate and type the text",P2:"Validate the text as per image",url:"./likhoIndia/home.html",cardNumber:"card3"})%>
+        <%- include('../../build/views/common/homeCard.ejs',{MODULE:"DEKHO",img:"../img/look2.svg",P1:"Type the text as per image",P2:"Validate the text as per image",url:"./dekhoIndia/home.html",cardNumber:"card4"})%>
     </div>
     <div class="row mt-5 align-item-center" style="background:rgba(223,236,251,.3)">
         <div class="col-12 col-lg-5 my-4 my-lg-5 mx-lg-5 align-self-center" style="font-style:normal;font-size:30px">
