--- a/crowdsource-ui/src/views/common/card/homeCard.ejs
+++ b/crowdsource-ui/src/views/common/card/homeCard.ejs
@@ -1,5 +1,5 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/homeCard.css">
-<div class="col-12 col-md-5 col-lg-3 text-dark mt-4 card card1 mr-lg-3 mr-md-3 justify-content-center align-items-center py-3" id="boloCard">
+<div class="col-12 col-md-5 col-lg-3 text-dark mt-4 card <%= cardNumber%> mr-lg-3 mr-md-3 justify-content-center align-items-center py-3" id="boloCard">
     <div id="say_container" class="row align-items-center card_container px-0 justify-content-center" style="height:100%">
         <div class="col-12 px-0 text-center">
             <h2 class="display-5">
