Ayush  | Resolve some mobile responsiveness issues

--- a/crowdsource-ui/src/views/common/card/cards.ejs
+++ b/crowdsource-ui/src/views/common/card/cards.ejs
@@ -1,5 +1,5 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/card.css">
-<div class="col-12 col-md-5 col-lg-5 text-dark mt-4 card card1 mr-lg-3 justify-content-center align-items-center py-3" id="left">
+<div class="col-12 col-md-5 col-lg-5 text-dark mt-4 card card1 mr-lg-3 mr-md-4 justify-content-center align-items-center py-3" id="left">
     <div class="row position-absolute" id="cont-warning-msg">
         <div class="warning-mesg d-flex">
             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -34,7 +34,7 @@
         </div>
     </div>
 </div>
-<div class="col-12 col-md-5 col-lg-5 text-dark mt-4 card card2 ml-lg-3 justify-content-center align-items-center py-3" id="right">
+<div class="col-12 col-md-5 col-lg-5 text-dark mt-4 card card2 ml-lg-3 ml-md-4 justify-content-center align-items-center py-3" id="right">
     <div class="row position-absolute" id="warning-msg">
        <div class="warning-mesg d-flex">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
