--- a/crowdsource-ui/src/views/common/moduleIntro/moduleIntro.ejs
+++ b/crowdsource-ui/src/views/common/moduleIntro/moduleIntro.ejs
@@ -1,6 +1,12 @@
-<div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
-    <div class="ml-4" style="padding:20px;background:rgba(223,236,251,.3);border-left:10px solid #dfecfb">
-        <h3> <%= __(name) %></h3>
-        <p style="font-style:italic"> <%= __(intro) %></p>
+<div class="row w-100 m-auto" style="max-width:1350px">
+    <div class="col-12 mt-4">
+        <div class="" style="padding:20px;background:rgba(223,236,251,.3);border-left:10px solid #dfecfb">
+            <h3>
+                <%= __(name) %>
+            </h3>
+            <p style="font-style:italic">
+                <%= __(intro) %>
+            </p>
+        </div>
     </div>
 </div>
