--- a/crowdsource-ui/src/views/terms-and-conditions.ejs
+++ b/crowdsource-ui/src/views/terms-and-conditions.ejs
@@ -18,13 +18,13 @@
 <%- include('common/headerForContributor.ejs',{path:"./", MODULE:"", PAGE_TITLE:""}); %>
         <div class="container-fluid">
             <div class="row justify-content-center bg-primary">
-                <div class="col-12 col-sm-10 col-md-8 px-1 py-0 text-light text-center mt-0 mt-sm-2 mt-lg-3">
+                <div class="col-12 col-sm-10 col-md-8 px-1 py-0 text-light text-center mt-0 mt-sm-2 mt-3">
                     <h1 class="display-5 font-wt-900">
                         Terms and Conditions
                     </h1>
                 </div>
             </div>
-            <div class="row justify-content-center align-items-center bg-primary pt-2" id="nav-row"><a id="nav-terms-of-use" class="text-white h6 p-3 badge-pill border mx-3 cursor-pointer">
+            <div class="row justify-content-center align-items-center bg-primary py-2" id="nav-row"><a id="nav-terms-of-use" class="text-white h6 p-3 badge-pill border mx-3 cursor-pointer">
                     Terms of Use
                 </a><a id="nav-privacy-policy" class="text-white h6 p-3 badge-pill border mx-3 cursor-pointer">
                     Privacy Policy
