--- a/crowdsource-ui/src/views/common/header.ejs
+++ b/crowdsource-ui/src/views/common/header.ejs
@@ -9,7 +9,7 @@
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-5" id="module_name">
+        <ul class="navbar-nav ml-lg-5" id="module_name">
             <li class="nav-item module-item p-2" value="home"><a href="<%= home %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Home') %>
                 </a></li>
