--- a/crowdsource-ui/src/views/common/header/header.ejs
+++ b/crowdsource-ui/src/views/common/header/header.ejs
@@ -1,3 +1,4 @@
+<link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/header.css">
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-4 py-lg-0">
     <div class="d-flex align-items-center">
         <a class="logo-text text-dark" href="/">
@@ -9,7 +10,7 @@
     </div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-5" id="module_name">
+        <ul class="navbar-nav ml-lg-5" id="module_name">
             <li class="nav-item module-item p-2" value="home"><a href="<%= home %>" class="nav-link text-dark font-weight-bold">
                     <%= __('Home') %>
                 </a></li>
