--- a/crowdsource-ui/src/views/common/languageNavBar/languageNavBar.ejs
+++ b/crowdsource-ui/src/views/common/languageNavBar/languageNavBar.ejs
@@ -1,14 +1,14 @@
-<div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4">
-    <nav class="navbar navbar-expand-lg navbar-light bg-white px-4" id="contribution_lang_navbar">
+<div class="col-12 col-md-12 col-lg-10 offset-lg-1 mt-4">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white px-4 flex-flow-nowrap" id="contribution_lang_navbar">
         <div class="mx-2">
             <%= __('Select the language for voluntary contribution') %>:
         </div>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedLanguage" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-        <div class="collapse navbar-collapse" id="navbarSupportedLanguage">
+        
+        <div class="navbar-collapse d-inherit mt-2 mt-lg-0 mt-md-0" id="navbarSupportedLanguage">
             <div class="col-5 col-lg-5 col-xl-4" id="nav-bar-loader">
                 <div><span class="spinner"></span></div>
             </div>
-            <ul class="navbar-nav text-primary cursor-pointer d-none" id="language-nav-bar">
+            <ul class="navbar-nav text-primary cursor-pointer d-none flex-direction-row" id="language-nav-bar">
                 <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Hindi">हिंदी</li>
                 <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Marathi">मराठी</li>
                 <li class="nav-item px-lg-4 px-md-4 px-2 options" value="Bengali">বাংলা</li>
