--- a/crowdsource-ui/src/views/common/card/homeCard.ejs
+++ b/crowdsource-ui/src/views/common/card/homeCard.ejs
@@ -1,11 +1,11 @@
 <link rel="preload" as="style" onload='this.onload=null,this.rel="stylesheet"' type="text/css" href="../../css/common/homeCard.css">
-<div class="col-12 col-md-5 col-lg-3 text-dark mt-4 card <%= cardNumber%> mr-lg-3 mr-md-3 justify-content-center align-items-center py-3" id="boloCard">
+<div class="col-12 col-md-5 col-lg-3 text-dark mt-4 mt-lg-0 card <%= cardNumber%> mr-lg-4 mr-md-3 justify-content-center align-items-center py-3" id="boloCard">
     <div id="say_container" class="row align-items-center card_container px-0 justify-content-center" style="height:100%">
         <div class="col-12 px-0 text-center">
             <h2 class="display-5">
                 <span class="text-primary"><%= __(MODULE) %></span><span><%= __(' India') %></span>
             </h2>
-            <div><a href="<%= url %>">
+            <div class="p-4"><a href="<%= url %>">
                     <img src="<%= img %>" alt="speaker" id="module_home" class="cursor-pointer listen-logo img-fluid" width="140px" height="140px">
                 </a>
             </div>
