--- a/crowdsource-ui/src/views/common/modals/report/report.ejs
+++ b/crowdsource-ui/src/views/common/modals/report/report.ejs
@@ -55,7 +55,7 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="text-center"><%= __('Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.') %></div>
+                <div class="text-center"><%= __(reportThankYou) %></div>
             </div>
         </div>
     </div>
