|Sreejith+Priyanshu| Add icons to correct incorrect- mobile view

--- a/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/sunoIndia/validation/validator-prompt-page.ejs
@@ -171,6 +171,9 @@
                         </div>
                     </div>
                     <button class="w-100 btn btn-link-primary my-2" disabled="disabled" id="need_change_mob">
+                        <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M9.33344 3.19673L12.8033 6.66658C12.9495 6.81276 12.9495 7.05126 12.8033 7.19744L4.40178 15.5989L0.831905 15.9952C0.354896 16.049 -0.0490225 15.6451 0.00483334 15.1681L0.401059 11.5982L8.80257 3.19673C8.94875 3.05055 9.18726 3.05055 9.33344 3.19673ZM15.5653 2.3158L13.6881 0.43854C13.1033 -0.14618 12.1532 -0.14618 11.5646 0.43854L10.2028 1.80032C10.0566 1.9465 10.0566 2.18501 10.2028 2.33119L13.6727 5.80104C13.8189 5.94722 14.0574 5.94722 14.2035 5.80104L15.5653 4.43926C16.15 3.85069 16.15 2.90052 15.5653 2.3158Z" fill="#007BFF"/>
+                            </svg>
                                 <%= __('Needs Change') %>
                     </button>
                     <button class="w-100 btn btn-link-primary my-2 d-none" id="cancel-edit-button_mob">
@@ -180,6 +183,9 @@
                         <div><span class="spinner w-h-5"></span></div>
                     </div>
                     <button class="btn btn-link-primary my-2 w-100" disabled="disabled" id="like_button_mob">
+                        <svg width="20" height="17" viewBox="0 0 20 17" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M2 10L7.21739 14.1739L18 2" stroke="#007BFF" stroke-width="3" stroke-linecap="round"/>
+                            </svg>
                                 <%= __('Correct') %>
                     </button>
                     <button class="btn btn-link-primary my-2 w-100 d-none" disabled="disabled" id="submit-edit-button_mob">
