--- a/crowdsource-ui/src/views/common/moduleIntro/moduleIntro.ejs
+++ b/crowdsource-ui/src/views/common/moduleIntro/moduleIntro.ejs
@@ -1,12 +1,17 @@
-<div class="row w-100 m-auto" style="max-width:1350px">
-    <div class="col-12 mt-4">
-        <div class="" style="padding:20px;background:rgba(223,236,251,.3);border-left:10px solid #dfecfb">
-            <h3>
+<div class="col-12 col-md-8 col-lg-10 offset-lg-1 mt-4" style="max-width:1550px">
+    <div class="col-12 mt-4 px-lg-0">
+        <div class="ml-0 ml-lg-4 ml-md-4" style="padding:20px 0 0">
+            <h1>
                 <%= __(name) %>
-            </h3>
-            <p style="font-style:italic">
+            </h1>
+            <p>
                 <%= __(intro) %>
             </p>
+        </div>
+        <div class="d-flex flex-row col-12 ml-0 ml-lg-4 ml-md-4 p-0">
+            <div class="col-4" style="border-bottom:2px solid #f49608"></div>
+            <div class="col-4" style="border-bottom:2px solid #4d82f7"></div>
+            <div class="col-4" style="border-bottom:2px solid #42bf2e"></div>
         </div>
     </div>
 </div>
