--- a/crowdsource-ui/src/views/common/header/header.ejs
+++ b/crowdsource-ui/src/views/common/header/header.ejs
@@ -3,7 +3,7 @@
     <div class="d-flex align-items-center">
         <a class="logo-text text-dark" href="/">
             <h2 class="mb-0">
-                <img src="../../img/meityLogo.svg" alt="Meity Logo" width="64px" height="54px">
+                <img src="../../img/BoloIndiaLogo.png" alt="Meity Logo" width="64px" height="54px">
             </h2>
         </a>
         <div class="version-beta">Beta</div>
