| Priyanshu | fix css of landing page

--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -64,7 +64,7 @@
         </div>
     </div>
 
-    <div class="row mt-5">
+    <div class="row my-5">
         <div class="col-12">
             <div class="text-center">
                 <p class="text-center persuade-quote"> <%= __('TAKE A STEP TOWARDS DIGITAL INDIA') %></p>
@@ -73,9 +73,11 @@
                     <div>
                         <img src="../img/emblemIndia.svg" alt="home image" height="30px" width="24px" class="img-fluid">
                     </div>
-                    <div class="ml-2">
-                        <div class="text-left"><%= __('Ministry of Electronics & Information Technology')%></div>
-                        <div class="text-left"><small><%= __('Government of India')%></small></div>
+                    <div class="ml-2" style="line-height:20px">
+                        <div class="text-left"><%= __('Ministry of Electronics & Information Technology')%>
+                        <br>
+                            <small><%= __('Government of India')%></small>
+                        </div>
                     </div>
                 </div>
             </div>
