| Priyanshu | made scroll bar overlay on landing page

--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -33,7 +33,7 @@
             <p class="h4 font-weight-light-lg font-weight-normal-sm lh-7 text-justify"><%= __('The participation is purely voluntary. The contributions made by you will be stored in the repo without any personal info. This data will be then made available to  technologists & language enthusiasts to help develop software and apps in Indian  languages, thus making them available to every Indian citizen.')%></p>
             <p class="h4 font-weight-light-lg font-weight-normal-sm lh-7 text-justify"><%= __('Help India build this open source platform and become atma-nirbhar in the digital space.')%></p>
         </div>
-        <div class="col-lg-4 col-md-4 col-12 align-self-center text-right" id="home-banner">
+        <div class="col-lg-4 col-md-4 col-12 align-self-center text-right p-0" id="home-banner">
             <img src="../img/home3.svg" alt="home image" height="595px" class="img-fluid">
         </div>
     </div>
