Ayush | Fix DEKHO mobile responsiveness

--- a/crowdsource-ui/src/views/common/image-container/dekhoImageBox.css
+++ b/crowdsource-ui/src/views/common/image-container/dekhoImageBox.css
@@ -1,7 +1,13 @@
-.image-container{
-    border:1px solid rgb(0,0,0,.2);
-    padding:30px;
-    border-radius:12px;
-    background-image: url(../../img/dekhoBgImg.svg);
-    background-repeat: repeat;
+    .image-container{
+        border:1px solid rgb(0,0,0,.2);
+        padding:30px;
+        border-radius:12px;
+        background-image: url(../../img/dekhoBgImg.svg);
+        background-repeat: repeat;
     }
+
+@media screen and (max-width: 768px){
+    .image-container{
+        padding:10px !important;
+    }
+}
