--- a/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
+++ b/crowdsource-ui/src/views/modules/dekhoIndia/validation/validator-prompt-page.ejs
@@ -146,7 +146,7 @@
             </div>
 
             <div id="myModal" class="modal">
-                <div class="position-relative d-flex m-auto" style="width:80%;top:103px">
+                <div class="position-relative d-flex m-auto image-modal">
                     <span class="close-validate">&times;</span>
                     <img class="modal-content" id="img01">
                 </div>
