--- a/crowdsource-ui/src/assets/css/validator-prompt.css
+++ b/crowdsource-ui/src/assets/css/validator-prompt.css
@@ -128,12 +128,12 @@ a {
 /* Modal Content (image) */
 #myModal .modal-content {
     height: 200px;
-    padding: 0 !important;
+    padding: 40px !important;
 }
 
 
 .close, .close-validate {
-    top: 10px !important;
+    top: -4px !important;
     right: 15px !important;
 }
 }
@@ -187,6 +187,11 @@ a {
         height: 80px;
         width: 160px;
     }
+
+    #myModal .image-modal {
+        width:155% !important;
+    }
+    
 
     #like_button > svg {
         height: 80px;
@@ -256,6 +261,11 @@ a {
     width: 100%;
     max-width: 1400px;
     padding: 2%;
+}
+
+#myModal .image-modal {
+    width:80%;
+    top:103px
 }
 
 /* Caption of Modal Image */
