--- a/crowdsource-ui/src/views/record.ejs
+++ b/crowdsource-ui/src/views/record.ejs
@@ -73,12 +73,12 @@
                 </div>
             </div>
             <div class="row justify-content-center align-items-center mb-5 mt-lg-5" id="startRecordRow">
-                <div class="col-xl-2 col-md-2 col-sm-12 col-xs-12 col-6 col-lg-2 pr-5">
+                <div class="col-xl-2 col-md-4 col-sm-12 col-xs-12 col-lg-3 mx-4 mr-md-5 px-0 pb-3 pb-md-0">
                     <button type="button" class="btn btn-outline-primary text-primary w-100 p-3" id="startRecord" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Start Recording') %> </button>
                     <button type="button" id="stopRecord" class="d-none btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Stop Recording') %> </button>
                     <button type="button" id="reRecord" class="d-none btn btn-outline-primary text-primary w-100 p-3" style="border-radius:50px;font-size:24px;border:2px solid #007bff"> <%= __('Re-record') %> </button>
                 </div>
-                <div class="col-xl-2 col-md-2 col-sm-12 col-xs-12 col-6 col-lg-2 pl-5">
+                <div class="col-xl-2 col-md-4 col-sm-12 col-xs-12 col-lg-3 mx-4 ml-md-5 px-0 pt-3 pt-md-0">
 
                         <button id="nextBtn" class="btn btn-secondary w-100 p-3 point-none" disabled="disabled" style="border-radius:50px;font-size:24px;opacity:.3"> <%= __('Submit') %> </button>
 
