--- a/crowdsource-ui/src/views/home.ejs
+++ b/crowdsource-ui/src/views/home.ejs
@@ -206,7 +206,8 @@
                     </label>
                 </div>
                 <div class="row justify-content-center mt-3">
-                    <div class="col-12" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>"><button type="button" id="bolo-proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-3">
+                    <div class="col-12" data-toggle="tooltip" title="<%= __('Please validate any error message before proceeding')%>">
+                        <button type="button" id="bolo-proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-3">
                             <%= __('LET\'S GO') %>
                         </button></div>
                 </div>
