--- a/crowdsource-ui/src/views/common/modals/mic-speaker-testing/mic-speaker-testing.ejs
+++ b/crowdsource-ui/src/views/common/modals/mic-speaker-testing/mic-speaker-testing.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="../../css/common/mic-speaker-testing.css">
 <div class="test-mic-speakers-container">
   <div class="col-12 test-mic-speakers-details d-none" id="test-mic-speakers-details">
-    <div class="row justify-content-between mb-4">
+    <div class="row justify-content-between mb-2 mb-md-4 mb-lg-4">
       <div class="col-lg-4 col-md-5 test-mic-heading">
         <p>
           <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
